WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80185
Have a copy of plug-in sandboxing API header in WebCore
https://bugs.webkit.org/show_bug.cgi?id=80185
Summary
Have a copy of plug-in sandboxing API header in WebCore
Alexey Proskuryakov
Reported
2012-03-02 13:07:09 PST
It won't be installed with system frameworks for now.
Attachments
proposed patch
(9.33 KB, patch)
2012-03-02 13:09 PST
,
Alexey Proskuryakov
andersca
: review+
ap
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(11.32 KB, patch)
2012-03-02 13:21 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-03-02 13:09:11 PST
Created
attachment 129945
[details]
proposed patch
WebKit Review Bot
Comment 2
2012-03-02 13:13:12 PST
Attachment 129945
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/plugins/npapi-sandbox.h:57: #ifndef header guard has wrong style, please use: npapi_sandbox_h [build/header_guard] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3
2012-03-02 13:13:39 PST
Comment on
attachment 129945
[details]
proposed patch Wait, where are my project file changes?
Alexey Proskuryakov
Comment 4
2012-03-02 13:21:49 PST
Created
attachment 129947
[details]
patch for landing
WebKit Review Bot
Comment 5
2012-03-02 18:41:17 PST
Comment on
attachment 129947
[details]
patch for landing Rejecting
attachment 129947
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: _by_irc_nickname(string_in_lowercase) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/config/committers.py", line 635, in contributor_by_name return self._name_to_contributor_map().get(name.lower()) if name else None File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/config/committers.py", line 517, in _name_to_contributor_map assert(contributor.full_name.lower() not in self._contributors_by_name) # We should never have duplicate names. AssertionError Full output:
http://queues.webkit.org/results/11799203
Alexey Proskuryakov
Comment 6
2012-03-02 19:05:29 PST
Comment on
attachment 129947
[details]
patch for landing What?
WebKit Review Bot
Comment 7
2012-03-02 21:31:31 PST
Comment on
attachment 129947
[details]
patch for landing Clearing flags on attachment: 129947 Committed
r109652
: <
http://trac.webkit.org/changeset/109652
>
WebKit Review Bot
Comment 8
2012-03-02 21:31:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug