Have a copy of plug-in sandboxing API header in WebCore https://bugs.webkit.org/show_bug.cgi?id=80185 <rdar://problem/8242128>

Reviewed by Anders Carlsson.

* plugins/npapi-sandbox.h: Added.

* WebCore.xcodeproj/project.pbxproj: Added as unused file.


Canonical link: https://commits.webkit.org/97322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109652 268f45cc-cd09-0410-ab3c-d52691b4dbfc